--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 /* ===== VARIABLES ===== */
 
 :root {
-    --red: #7A1A3F;
+    --primary-color: black;
     --off-white: #f2f2f2;
     --title-ff: 'Raleway';
     --text-ff: 'Inter';
@@ -36,16 +36,20 @@ section > h2:first-of-type {
     margin: auto;
     margin-bottom: 100px;
     font-weight: 500;
-    color: var(--red);
+    color: var(--primary-color);
     font-family: var(--title-ff);
     font-size: 38px;
+}
+
+a:hover {
+    text-decoration: underline !important;
 }
 
 .button {
     width: 160px;
     height: auto;
-    background: var(--red);
-    border: 2px solid var(--red);
+    background: var(--primary-color);
+    border: 2px solid var(--primary-color);
     color: white;
     margin: auto;
     padding-top: 10px;
@@ -54,9 +58,9 @@ section > h2:first-of-type {
 
 .button:hover {
     background: white;
-    color: var(--red);
+    color: var(--primary-color);
     cursor: pointer;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 .box-shadow {
@@ -99,11 +103,12 @@ header {
     padding-left: 30px;
     padding-right: 30px;
     z-index: 1000;
-    border-bottom: 2px solid var(--red);
+    border-bottom: 2px solid var(--primary-color);
 }
 
 .main-nav img {
-    height: 40px;
+    height: 60px;
+    width: 292px;
 }
 
 .main-nav ul {
@@ -127,14 +132,14 @@ header {
 }
 
 .main-nav a {
-    color: var(--red);
+    color: var(--primary-color);
     font-size: 15px;
     text-decoration: none;
     font-weight: unset;
 }
 
 .main-nav a:hover {
-    color: var(--red);
+    color: var(--primary-color);
 }
 
 
@@ -207,6 +212,9 @@ header {
     animation-iteration-count: 1;
 }
 
+.hero:hover a {
+    text-decoration: none !important;
+}
 
 /* ===== ABOUT AND CONTACT ===== */
 
@@ -242,7 +250,6 @@ header {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 5px;
 }
 
 .about-text, .contact-form {
@@ -287,10 +294,6 @@ header {
     justify-content: space-evenly;
 }
 
-.contact-form h4 {
-    margin-left: 10px;
-}
-
 .contact-form form {
     width: 100%;
     height: 100%;
@@ -316,7 +319,6 @@ fieldset div {
 
 form > * {
     width: 100%;
-    padding-left: 10px;
 }
 
 form .required:after {
@@ -339,7 +341,9 @@ form textarea {
 }
 
 form .submit-button {
-    width: 100%;
+    width: 50%;
+    margin-left: 0;
+    margin-right: auto;
 }
 
 
@@ -364,13 +368,11 @@ form .submit-button {
 }
 
 .services .services-card {
-    height: 427px;
+    height: 500px;
     width: 30%;
-    border-radius: 5px;
     overflow: hidden;
     background: white;
     color: black;
-    /*padding: 10px;*/
 }
 
 .services-card img {
@@ -383,11 +385,14 @@ form .submit-button {
     padding: 20px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    align-items: center;
+    height: 350px;
+    gap: 20px;
 }
 
 .services-content p {
     font-size: 14px;
+    max-width: 300px;
 }
 
 
@@ -425,11 +430,11 @@ form .submit-button {
 
 .projects .button-inverse {
     background: white;
-    color: var(--red);
+    color: var(--primary-color);
 }
 
 .projects .button:not(.button-inverse):hover  {
-    background: var(--red) !important;
+    background: var(--primary-color) !important;
     color: white !important;
 }
 
@@ -463,7 +468,7 @@ form .submit-button {
     font-size: 40px;
     line-height: 100px;
     font-weight: 700;
-    color: var(--red);
+    color: var(--primary-color);
     white-space: nowrap;
     width: 100%;
     margin: 0;
@@ -472,7 +477,7 @@ form .submit-button {
 .project-item-text h5 {
     font-size: 20px;
     font-weight: 500;
-    color: var(--red);
+    color: var(--primary-color);
     white-space: nowrap;
     width: 100%;
     margin: 0;
@@ -481,7 +486,7 @@ form .submit-button {
 
 
 .project-item-text .location {
-    color: var(--red);
+    color: var(--primary-color);
     white-space: nowrap;
     height: 50px;
     width: 100%;
@@ -520,7 +525,7 @@ form .submit-button {
     position: absolute;
     left: -30px;
     top: 10px;
-    color: darkgreen;
+    color: var(--primary-color);
     font-size: 30px;
     font-weight: 700;
     line-height: 100px;
@@ -566,7 +571,7 @@ form .submit-button {
     top: 10px;
     left: 10px;
     text-transform: uppercase;
-    color: var(--red);
+    color: var(--primary-color);
     background: white;
     padding: 7px 10px;
     width: fit-content;
@@ -574,12 +579,13 @@ form .submit-button {
 }
 
 .project-item .images-container #first-image-1.fade-in, #first-image-2.fade-in {
-    animation: fadeInAnimation 0.1s linear forwards;
+    animation: fadeInAnimation 1s linear forwards;
+    animation-delay: 300ms;
 }
 
 .project-item .images-container #second-image-1.fade-in, #second-image-2.fade-in {
-    animation: fadeInAnimation 0.1s linear forwards;
-    animation-delay: 0ms;
+    animation: fadeInAnimation 1s linear forwards;
+    animation-delay: 800ms;
 }
 
 
@@ -587,7 +593,7 @@ form .submit-button {
 
 footer {
     height: 200px;
-    background: var(--red);
+    background: var(--primary-color);
     color: white;
     overflow: hidden;
     padding-left: 40px;
@@ -613,11 +619,8 @@ footer {
 .footer-left img {
     display: block;
     height: 60px;
-    width: 100px;
     width: auto;
-    background-color: white;
-    padding: 10px;
-    border-radius: 5px;
+    border: 1px solid white;
     margin-top: 10px;
 }
 
@@ -794,21 +797,20 @@ footer {
     }
 
     .about-text, .contact-form {
+        margin-top: 30px;
         width: 100%;
+        align-items: center;
     }
 
     form {
-        padding-right: unset;
-    }
-
-    form > * {
-        padding-left: unset;
+        padding-right: unset !important;
     }
 
     form fieldset {
-        margin-top: 30px;
+        margin-top: 0px;
         margin-bottom: 30px;
-        justify-content: unset;
+        justify-content: center;
+        align-items: center;
         gap: 30px;
     }
 
@@ -951,7 +953,7 @@ footer {
     }
 
     .mobile-menu-button {
-        color: var(--red);
+        color: var(--primary-color);
         font-size: 50px;
         height: 80px;
         line-height: 80px;
@@ -1012,7 +1014,7 @@ footer {
     }
 
     .mobile-nav a {
-        color: var(--red);
+        color: var(--primary-color);
         font-size: 20px;
         text-decoration: none;
     }
