--- a/main.css
+++ b/main.css
@@ -742,7 +742,6 @@ footer {
         width: 100%;
         height: 300px;
     }
-
 }
 
 
@@ -812,6 +811,10 @@ footer {
         justify-content: center;
         align-items: center;
         gap: 30px;
+    }
+
+    form .submit-button {
+        margin: auto;
     }
 
     .about-content .about-text h3 {
