updated theme and styles

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,6 @@
 footer {
     height: 200px;
-    background: var(--primary-color);
+    background: var(--primary);
     color: white;
     overflow: hidden;
     padding-left: 40px;
