--- a/styles/about-contact.css
+++ b/styles/about-contact.css
@@ -8,17 +8,17 @@
     width: 1440px;
     justify-content: center;
     margin: auto;
-    padding-bottom: 100px;
     gap: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 50px;
 }
 
 .about-content {
     flex-direction: row-reverse;
     padding-left: 100px;
     padding-right: 100px;
+    padding-top: 70px;
     gap: 0;
+    margin-bottom: 70px;
 }
 
 .about-image, .contact-image {
@@ -32,13 +32,27 @@
     height: 100%;
 }
 
+.about-image img:hover {
+    cursor: pointer;
+}
+
 .about-text, .contact-form {
     width: 50%;
-    height: auto;
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: flex-start;
+}
+
+.about-text {
+    height: fit-content;
+    margin-top: auto;
+    margin-bottom: auto;
+    justify-content: center;
+}
+
+.contact-form {
+    height: auto;
 }
 
 .contact-form {
@@ -59,7 +73,7 @@
 .about-text .button {
     margin-left: 0;
     margin-right: auto;
-    margin-bottom: 0;
+    margin-top: 30px;
     padding-left: 20px;
     padding-right: 20px;
     width: fit-content;
@@ -81,14 +95,15 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
 }
 
 form fieldset {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 100%;
-    padding-bottom: 40px;
+    height: fit-content;
+    gap: 30px;
 }
 
 fieldset div {
@@ -103,30 +118,52 @@ form > * {
 
 form .required:after {
     content:" *";
-    color: red;
+    color: var(--secondary);
 }
 
 form label {
     margin-bottom: 5px;
 }
 
-form input {
+form input, form select {
     height: 40px;
     width: 100%;
+    border: 2px solid var(--primary);
+    background: white;
+    color: black;
+    border-radius: 0;
+}
+
+form input:focus, form select:focus {
+    outline: none !important;
 }
 
 form textarea {
-    height: 60px;
+    min-height: 40px;
+    border: 2px solid var(--primary);
+    height: auto;
     width: 100%;
+    transition: height 0.2s linear;
+    border-radius: 0;
+}
+
+form textarea:focus {
+    outline: none !important;
 }
 
 form .submit-button {
     width: 50%;
+    min-width: 300px;
     margin-left: 0;
     margin-right: auto;
+    margin-bottom: 0;
 }
 
-
+form .recaptcha-text {
+    position: absolute;
+    bottom: -60px;
+    font-size: 12px;
+}
 
 
 @media only screen and (min-width: 1000px) and (max-width: 1440px) {
@@ -164,6 +201,11 @@ form .submit-button {
         padding-right: 20px;
     }
 
+    .about-content {
+        justify-content: space-between !important;
+        gap: 30px;
+    }
+
     .contact-image {
         width: 100%;
     }
@@ -176,30 +218,48 @@ form .submit-button {
 
     form {
         padding-right: unset !important;
+        height: fit-content;
     }
 
     form fieldset {
         margin-top: 0px;
-        margin-bottom: 30px;
         justify-content: center;
         align-items: center;
         gap: 30px;
+        margin-bottom: 0;
+        height: fit-content;
+        overflow: hidden;
     }
 
     form .submit-button {
         margin: auto;
+        margin-bottom: 0;
+        max-width: 300px !important;
     }
 
     .about-content .about-text h3 {
         width: 100%;
+        text-align: center;
     }
 
     .about-content .about-text p {
         width: 100%;
+        font-size: 16px;
     }
 
-    .about-image, .contact-image {
+    .about-image {
         width: 100%;
+        height: 400px;
+        margin: auto;
+    }
+
+    .about-image figcaption {
+        font-size: 14px;
+        text-align: center;
+    }
+
+    .about-image img {
+        display: inline-block;
         height: 400px;
     }
 
@@ -209,9 +269,3 @@ form .submit-button {
         margin-top: 20px;
     }
 }
-
-@media only screen and (max-width: 600px) {
-
-}
-
-
