--- a/styles/header.css
+++ b/styles/header.css
@@ -26,7 +26,7 @@ header {
     padding-left: 30px;
     padding-right: 30px;
     z-index: 1000;
-    border-bottom: 2px solid var(--primary-color);
+    border-bottom: 2px solid var(--primary);
 }
 
 .main-nav img {
@@ -55,14 +55,14 @@ header {
 }
 
 .main-nav a {
-    color: var(--primary-color);
+    color: var(--primary);
     font-size: 15px;
     text-decoration: none;
     font-weight: unset;
 }
 
 .main-nav a:hover {
-    color: var(--primary-color);
+    color: var(--primary);
 }
 
 @media only screen and (max-width: 1000px) {
@@ -101,7 +101,7 @@ header {
     }
 
     .mobile-menu-button {
-        color: var(--primary-color);
+        color: var(--primary);
         font-size: 50px;
         height: 80px;
         line-height: 80px;
@@ -140,7 +140,7 @@ header {
         height: 0;
         transition: height 0.2s linear;
         overflow: hidden;
-        background: var(--off-white);
+        background: var(--light);
         margin-top: -100px;
     }
 
@@ -162,7 +162,7 @@ header {
     }
 
     .mobile-nav a {
-        color: var(--primary-color);
+        color: var(--primary);
         font-size: 20px;
         text-decoration: none;
     }
