--- a/styles/projects.css
+++ b/styles/projects.css
@@ -30,11 +30,11 @@
 
 .projects .button-inverse {
     background: white;
-    color: var(--primary-color);
+    color: var(--primary);
 }
 
 .projects .button:not(.button-inverse):hover  {
-    background: var(--primary-color) !important;
+    background: var(--primary) !important;
     color: white !important;
 }
 
@@ -56,7 +56,7 @@
     height: 250px;
     width: 100%;
     padding: 20px 20px 40px;
-    background: var(--off-white);
+    background: var(--light);
     gap: 50px;
 }
 
@@ -68,7 +68,7 @@
     font-size: 40px;
     line-height: 100px;
     font-weight: 700;
-    color: var(--primary-color);
+    color: var(--primary);
     white-space: nowrap;
     width: 100%;
     margin: 0;
@@ -77,7 +77,7 @@
 .project-item-text h5 {
     font-size: 20px;
     font-weight: 500;
-    color: var(--primary-color);
+    color: var(--primary);
     white-space: nowrap;
     width: 100%;
     margin: 0;
@@ -86,7 +86,7 @@
 
 
 .project-item-text .location {
-    color: var(--primary-color);
+    color: var(--primary);
     white-space: nowrap;
     height: 50px;
     width: 100%;
@@ -125,7 +125,7 @@
     position: absolute;
     left: -30px;
     top: 10px;
-    color: var(--primary-color);
+    color: var(--primary);
     font-size: 30px;
     font-weight: 700;
     line-height: 100px;
@@ -171,7 +171,7 @@
     top: 10px;
     left: 10px;
     text-transform: uppercase;
-    color: var(--primary-color);
+    color: var(--primary);
     background: white;
     padding: 7px 10px;
     width: fit-content;
@@ -314,6 +314,11 @@
 
     .project-item-text div {
         margin: auto;
+    }
+
+    .project-item-text .left-text {
+        text-align: left;
+        width: 100%;
     }
 
     .project-item .project-item-text .right-text ul {
